# TagSearchEngine

./: CMakeLists.txt  README.md
include/jce_tagsearchengine/: engine.hpp  strEngine.hpp  tagEngine.hpp  tagSet.hpp  utils.hpp
include/jce_tagsearchengine/memory/: strMemory.hpp  tagSet.hpp
test/: CMakeLists.txt  main.cpp
